Fix Floating Point excpetion caused by improper initializer of a private device structure subclassed (in the klunky C ghostscript fashion) from the gx_device_printers_s structure. Restructure a macro in base/gdevprn.h to help prevent similar bit rot in the future.  Bug 690122.

DETAILS:

The problem was with devices that use the contrib/lips4/gdevlprn.h header
files. The lp_duplex_device_body_rest_ and lp_device_body_rest_ macros that
initialized the prn_device structure 'common' elements were out of date with
respect to the revision in the gx_device_printer_s structure made for the
multi-threaded rendering. The num_render_threads_requested integer was added.

I restructured the prn_device_body_rest2_ in base/gdevprn.h so that the
contrib/lips4/gdevlprn.h initialization macro could use this to minimize the
likelihood of bit rot in the future.

I did a search for other devices that might have the same problem and did not
find them (although I may have missed them).

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@9192 a1074d23-0009-0410-80fe-cf8c14f379e6